# libsr2

./: .gitignore  .gitmodules  CMakeLists.txt  default.h  ghidra_temp.h  newclass.bat
game/: CMakeLists.txt
game/src/: main.cpp
grammars/: anim.grammar  imf.grammar
include/libsr2/: globals.h  libsr2.h  types.h
include/libsr2/ai/: aiAgent.h
include/libsr2/ambient/: aiAmbientVehicleAudio.h  ambientAgent.h  ambientData.h  ambientEntity.h  (+1 more)
lib/debug/: common-d.lib  glfw3.lib  libmpeg2.lib  zlibstaticd.lib
lib/release/: zlibstatic.lib
src/: ParticleManager.cpp  globals.cpp  libsr2.cpp  main.cpp
src/ai/: aiAgent.cpp
src/ambient/: aiAmbientVehicleAudio.cpp  ambientAgent.cpp  ambientData.cpp  ambientEntity.cpp  ambientWheel.cpp
src/audio/: AudioSource.cpp  Cls_00331090.cpp  Cls_003310e0.cpp  GlobalAudioThing.cpp  SomeAudioThing.cpp  SomeAudioThing1.cpp  SomeAudioThing2.cpp  SomeAudioThing3.cpp  SomeAudioThing4.cpp  SomeAudioThing5.cpp  SomeAudioThing6.cpp  SomeAudioThing7.cpp  SomeAudioThingBase.cpp  aud3DObject.cpp  audBase.cpp  audCreatureInfo.cpp  audImpact.cpp  audMissionSpeech.cpp  audPlayer.cpp  audSound.cpp  audSoundBase.cpp  audSoundInfo.cpp
src/creature/: crAnimBlender.cpp  crAnimFrame.cpp  crAnimPlayer.cpp  crAnimation.cpp  crBone.cpp  crBoneData.cpp  crSkeleton.cpp  crSkeletonData.cpp  creature.cpp  ragBallJoint.cpp  ragElbowJoint.cpp  ragJoint.cpp  ragdoll.cpp  srActive.cpp  srActivePool.cpp  srCreatureGroup.cpp  srMover.cpp  srType.cpp
src/frontend/: srfeAngelLogoMovie.cpp  srfeBackground.cpp  srfeBasicLayout1.cpp  srfeBasicLayout2.cpp  srfeBasicLayout3.cpp  srfeBombTag.cpp  srfeBonusMissions.cpp  srfeCNS.cpp  srfeCareer1Movie.cpp  srfeCareer2Movie.cpp  srfeCareer3Movie.cpp  srfeCareer4Movie.cpp  srfeCareer5Movie.cpp  srfeCareer6Movie.cpp  srfeCareer7Movie.cpp  srfeCareer8Movie.cpp  srfeCareer9Movie.cpp  srfeCheckpointRace.cpp  srfeConceptArt.cpp  srfeControllerSetup.cpp  srfeCredits.cpp  srfeExtras.cpp  srfeHiScoresBase.cpp  srfeHiScoresBombTag.cpp  srfeHiScoresBonus.cpp  srfeHiScoresCNS.cpp  srfeHiScoresCheckpointRace.cpp  srfeHiScoresLootGrab.cpp  srfeHiScoresMain.cpp  srfeHiScoresSmuggler.cpp  srfeIntroMovie.cpp  srfeJoyriding.cpp  srfeLanguageInGame.cpp  srfeLanguageSelectAtBoot.cpp  srfeLoadOrNew.cpp  srfeLoading.cpp  srfeLootGrab.cpp  srfeMainMenu.cpp  srfeMemcardCheck.cpp  srfeMemcardManager.cpp  (+20 more)
src/gfx/: gfx.cpp  gfxImage.cpp  gfxLight.cpp  gfxTexture.cpp  gfxTextureMovie.cpp  gfxViewport.cpp  mpeg.cpp  ui.cpp
src/i18n/: txtStringTable.cpp
src/instances/: Allocator.cpp  PhysInstance.cpp  ambientInstance.cpp  lvlInstance.cpp  srActiveInstance.cpp  unkInstance0.cpp  unknown.cpp
src/io/: TaggedStream.cpp  datAsciiTokenizer.cpp  datBaseTokenizer.cpp  datBinTokenizer.cpp  datMultiTokenizer.cpp  datParser.cpp  datTokenizer.cpp  ioKeyboard.cpp  ioPad.cpp  parCsvFile.cpp  parFileIO.cpp  stream.cpp
src/managers/: Aud3DObjectManager.cpp  AudioManager.cpp  ParticleManager.cpp  PhysEntityManager.cpp  RagdollManager.cpp  TriggerManager.cpp  UnkManager0.cpp  UnkManager1.cpp  VehicleMgr.cpp  ambientManager.cpp  audManager.cpp  datAssetManager.cpp  datTimeManager.cpp  dgBangerDataManager.cpp  dgBombManager.cpp  dgGeyserManager.cpp  dgPhysManager.cpp  dgPhysManagerBase.cpp  dynManager.cpp  lvlMaterialMgr.cpp  missManager.cpp  orAIManager.cpp  orPropManager.cpp  phContactManager.cpp  phMaterialMgr.cpp  srActiveInstanceManager.cpp  srAudMgr.cpp  srCreatureManager.cpp  vehBreakableManager.cpp
src/math/: mat3x3f.cpp  mat3x4f.cpp  mat4x4f.cpp  math.cpp  quat.cpp  vec2f.cpp  vec2i.cpp  vec3f.cpp  vec4f.cpp
src/mission/: CheckpointMission.cpp  CinematicMission.cpp  Contraband.cpp  ContrabandMission.cpp  FollowMission.cpp  JoyrideMission.cpp  Mission.cpp  MissionWeatherData.cpp  UnorderedMission.cpp  VehicleAssaultMission.cpp  missOpponent.cpp
src/particles/: BaseParticle.cpp  ParticleBirthRule.cpp  ParticleSystem.cpp  WakeBirthRule.cpp  WakeSystem.cpp  asBirthRule.cpp  asParticles.cpp
src/sim/: PhysEntity.cpp  SpatialPartitioner.cpp  dgBomb.cpp  dgLinkData.cpp  dgRagdoll.cpp  lvlMaterial.cpp  phBound.cpp  phBoundBox.cpp  phBoundCollision.cpp  phBoundComposite.cpp  phBoundGeometry.cpp  phBoundHotdog.cpp  phBoundOTGrid.cpp  phBoundPolygonal.cpp  phBoundSphere.cpp  phBoundTerrain.cpp  phColliderBase.cpp  phCollision.cpp  phCollisionPrim.cpp  phContact.cpp  phImpactBase.cpp  phInertialCS.cpp  phInst.cpp  phIntersectionPoint.cpp  phMaterial.cpp  phPolygon.cpp  phSegment.cpp  phSleep.cpp  phUnkCollider.cpp  vehBound.cpp
src/states/: GameLoadState.cpp  GameState.cpp  InGamePausedState.cpp  InGameState.cpp  InMenuState.cpp  MenuLoadState.cpp  gameFSM.cpp
src/terrain/: lvlLevel.cpp  offroadLevel.cpp  orTerrainGrid.cpp  orTerrainGridLoad.cpp
src/ui/: ASCIIStringEventData.cpp  FloatEventData.cpp  GameLoadingScreen.cpp  IntegerEventData.cpp  UnkWidgetBinTree0.cpp  UnkWidgetBinTree1.cpp  WidgetBinTree.cpp  srui2Bitmap.cpp  srui2ButtonMenu.cpp  srui2Clock.cpp  srui2CycleMenu.cpp  srui2SRScreen.cpp  srui2TextMenu.cpp  srui2VehicleDisplay.cpp  ui2Base.cpp  ui2Color.cpp  ui2Condition.cpp  ui2DynamicText.cpp  ui2EventData.cpp  ui2Image.cpp  ui2Input.cpp  ui2Master.cpp  ui2Menu.cpp  ui2Movie.cpp  ui2Position.cpp  ui2Repeater.cpp  ui2Screen.cpp  ui2Sound.cpp  ui2String.cpp  ui2Table.cpp  ui2Text.cpp  ui2Timer.cpp  ui2TranslatedText.cpp  ui2Unknown0.cpp  ui2UnknownMenu0.cpp  ui2Variable.cpp  ui2Visual.cpp  ui2Widget.cpp  ui2WidgetBase.cpp  uiUnknown25.cpp
src/unknown/: unknown.cpp
src/utilities/: Data.cpp  DebugDrawer.cpp  GameArchive.cpp  HashTable.cpp  argParser.cpp  color.cpp  datArgParser.cpp  datCallback.cpp  datParser.cpp  datRefCount.cpp  datTimeManager.cpp  msgMsgSink.cpp  msgMsgSource.cpp  parFileIO.cpp  parser.cpp  timer.cpp  txtFontTex.cpp  utils.cpp
src/vehicle/: vehAero.cpp  vehAxle.cpp  vehBound.cpp  vehCarSim.cpp  vehCarSimBase.cpp  vehDriver.cpp  vehDrivetrain.cpp  vehEngine.cpp  vehFluid.cpp  vehSim.cpp  vehSuspension.cpp  vehTransmission.cpp  vehWheel.cpp  vehicle.cpp
test/: CMakeLists.txt
test/src/: Draw.cpp  Draw.h  main.cpp
(+285 files in other folders)
